sandbox/parse_test/parser.output
   0  $accept : %entry% $end

   1  toplevel : m1 toplevel
   2           | fun_dec toplevel
   3           | m2 toplevel
   4           | EOF
   5           | error

   6  m1 : DATA CAPID WHERE nl cons_decs

   7  m2 : ID EQUAL QUESTION

   8  cons_decs : cons_dec cons_decs
   9            | cons_dec

  10  cons_dec : CAPID COLON COLON texp nl

  11  fun_dec : ID COLON COLON texp nl

  12  texp : tatom nl ALLOW nl texp
  13       | CAPID tatoms
  14       | tatom

  15  tatom : INT
  16        | BOOL
  17        | CAPID
  18        | LPAREN texp RPAREN

  19  tatoms : tatom tatoms
  20         | tatom

  21  nl : NEWLINE nl
  22     |

  23  %entry% : '\001' toplevel

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . toplevel  (23)

	error  shift 3
	DATA  shift 4
	ID  shift 5
	EOF  shift 6
	.  error

	toplevel  goto 7
	m1  goto 8
	fun_dec  goto 9
	m2  goto 10


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	toplevel : error .  (5)

	.  reduce 5


state 4
	m1 : DATA . CAPID WHERE nl cons_decs  (6)

	CAPID  shift 11
	.  error


state 5
	m2 : ID . EQUAL QUESTION  (7)
	fun_dec : ID . COLON COLON texp nl  (11)

	EQUAL  shift 12
	COLON  shift 13
	.  error


state 6
	toplevel : EOF .  (4)

	.  reduce 4


state 7
	%entry% : '\001' toplevel .  (23)

	.  reduce 23


state 8
	toplevel : m1 . toplevel  (1)

	error  shift 3
	DATA  shift 4
	ID  shift 5
	EOF  shift 6
	.  error

	toplevel  goto 14
	m1  goto 8
	fun_dec  goto 9
	m2  goto 10


state 9
	toplevel : fun_dec . toplevel  (2)

	error  shift 3
	DATA  shift 4
	ID  shift 5
	EOF  shift 6
	.  error

	toplevel  goto 15
	m1  goto 8
	fun_dec  goto 9
	m2  goto 10


state 10
	toplevel : m2 . toplevel  (3)

	error  shift 3
	DATA  shift 4
	ID  shift 5
	EOF  shift 6
	.  error

	toplevel  goto 16
	m1  goto 8
	fun_dec  goto 9
	m2  goto 10


state 11
	m1 : DATA CAPID . WHERE nl cons_decs  (6)

	WHERE  shift 17
	.  error


state 12
	m2 : ID EQUAL . QUESTION  (7)

	QUESTION  shift 18
	.  error


state 13
	fun_dec : ID COLON . COLON texp nl  (11)

	COLON  shift 19
	.  error


state 14
	toplevel : m1 toplevel .  (1)

	.  reduce 1


state 15
	toplevel : fun_dec toplevel .  (2)

	.  reduce 2


state 16
	toplevel : m2 toplevel .  (3)

	.  reduce 3


state 17
	m1 : DATA CAPID WHERE . nl cons_decs  (6)
	nl : .  (22)

	NEWLINE  shift 20
	CAPID  reduce 22

	nl  goto 21


state 18
	m2 : ID EQUAL QUESTION .  (7)

	.  reduce 7


state 19
	fun_dec : ID COLON COLON . texp nl  (11)

	CAPID  shift 22
	LPAREN  shift 23
	INT  shift 24
	BOOL  shift 25
	.  error

	texp  goto 26
	tatom  goto 27


state 20
	nl : NEWLINE . nl  (21)
	nl : .  (22)

	NEWLINE  shift 20
	error  reduce 22
	DATA  reduce 22
	ID  reduce 22
	CAPID  reduce 22
	LPAREN  reduce 22
	INT  reduce 22
	BOOL  reduce 22
	ALLOW  reduce 22
	EOF  reduce 22

	nl  goto 28


state 21
	m1 : DATA CAPID WHERE nl . cons_decs  (6)

	CAPID  shift 29
	.  error

	cons_decs  goto 30
	cons_dec  goto 31


state 22
	texp : CAPID . tatoms  (13)
	tatom : CAPID .  (17)

	LPAREN  shift 23
	INT  shift 24
	BOOL  shift 25
	error  reduce 17
	DATA  reduce 17
	ID  reduce 17
	RPAREN  reduce 17
	ALLOW  reduce 17
	EOF  reduce 17
	NEWLINE  reduce 17

	tatom  goto 33
	tatoms  goto 34


state 23
	tatom : LPAREN . texp RPAREN  (18)

	CAPID  shift 22
	LPAREN  shift 23
	INT  shift 24
	BOOL  shift 25
	.  error

	texp  goto 35
	tatom  goto 27


state 24
	tatom : INT .  (15)

	.  reduce 15


state 25
	tatom : BOOL .  (16)

	.  reduce 16


state 26
	fun_dec : ID COLON COLON texp . nl  (11)
	nl : .  (22)

	NEWLINE  shift 20
	error  reduce 22
	DATA  reduce 22
	ID  reduce 22
	EOF  reduce 22

	nl  goto 36


27: shift/reduce conflict (shift 20, reduce 14) on NEWLINE
state 27
	texp : tatom . nl ALLOW nl texp  (12)
	texp : tatom .  (14)
	nl : .  (22)

	NEWLINE  shift 20
	error  reduce 14
	DATA  reduce 14
	ID  reduce 14
	CAPID  reduce 14
	RPAREN  reduce 14
	ALLOW  reduce 22
	EOF  reduce 14

	nl  goto 37


state 28
	nl : NEWLINE nl .  (21)

	.  reduce 21


state 29
	cons_dec : CAPID . COLON COLON texp nl  (10)

	COLON  shift 38
	.  error


state 30
	m1 : DATA CAPID WHERE nl cons_decs .  (6)

	.  reduce 6


state 31
	cons_decs : cons_dec . cons_decs  (8)
	cons_decs : cons_dec .  (9)

	CAPID  shift 29
	error  reduce 9
	DATA  reduce 9
	ID  reduce 9
	EOF  reduce 9

	cons_decs  goto 39
	cons_dec  goto 31


state 32
	tatom : CAPID .  (17)

	.  reduce 17


33: shift/reduce conflict (shift 32, reduce 20) on CAPID
state 33
	tatoms : tatom . tatoms  (19)
	tatoms : tatom .  (20)

	CAPID  shift 32
	LPAREN  shift 23
	INT  shift 24
	BOOL  shift 25
	error  reduce 20
	DATA  reduce 20
	ID  reduce 20
	RPAREN  reduce 20
	EOF  reduce 20
	NEWLINE  reduce 20

	tatom  goto 33
	tatoms  goto 40


state 34
	texp : CAPID tatoms .  (13)

	.  reduce 13


state 35
	tatom : LPAREN texp . RPAREN  (18)

	RPAREN  shift 41
	.  error


state 36
	fun_dec : ID COLON COLON texp nl .  (11)

	.  reduce 11


state 37
	texp : tatom nl . ALLOW nl texp  (12)

	ALLOW  shift 42
	.  error


state 38
	cons_dec : CAPID COLON . COLON texp nl  (10)

	COLON  shift 43
	.  error


state 39
	cons_decs : cons_dec cons_decs .  (8)

	.  reduce 8


state 40
	tatoms : tatom tatoms .  (19)

	.  reduce 19


state 41
	tatom : LPAREN texp RPAREN .  (18)

	.  reduce 18


state 42
	texp : tatom nl ALLOW . nl texp  (12)
	nl : .  (22)

	NEWLINE  shift 20
	CAPID  reduce 22
	LPAREN  reduce 22
	INT  reduce 22
	BOOL  reduce 22

	nl  goto 44


state 43
	cons_dec : CAPID COLON COLON . texp nl  (10)

	CAPID  shift 22
	LPAREN  shift 23
	INT  shift 24
	BOOL  shift 25
	.  error

	texp  goto 45
	tatom  goto 27


state 44
	texp : tatom nl ALLOW nl . texp  (12)

	CAPID  shift 22
	LPAREN  shift 23
	INT  shift 24
	BOOL  shift 25
	.  error

	texp  goto 46
	tatom  goto 27


state 45
	cons_dec : CAPID COLON COLON texp . nl  (10)
	nl : .  (22)

	NEWLINE  shift 20
	error  reduce 22
	DATA  reduce 22
	ID  reduce 22
	CAPID  reduce 22
	EOF  reduce 22

	nl  goto 47


state 46
	texp : tatom nl ALLOW nl texp .  (12)

	.  reduce 12


state 47
	cons_dec : CAPID COLON COLON texp nl .  (10)

	.  reduce 10


State 27 contains 1 shift/reduce conflict.
State 33 contains 1 shift/reduce conflict.


19 terminals, 12 nonterminals
24 grammar rules, 48 states
